objects/SLSI__Recent_Updates__c.object
<CustomObject>
    <fields>
        <fullName>SLSI__AllOffices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AllOffices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLSI__Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLSI__Related_To__c</fullName>
        <label>Related To</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SLSI__Sobject_Type__c</fullName>
        <label>Sobject Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Recent Updates</label>
    <listViews>
        <fullName>SLSI__All</fullName>
        <columns>SLSI__Related_To__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SLSI__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recent Updates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recent Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>